--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "plyr",
-    "version": "3.3.23",
+    "name": "hahow-plyr",
+    "version": "1.3.1",
     "description":
         "A simple, accessible and customizable HTML5, YouTube and Vimeo media player",
     "homepage": "https://plyr.io",
